bug #411: align recipes, set default photo, set const recipe card height

--- a/recipot/src/main/ts/recipot/src/App.scss
+++ b/recipot/src/main/ts/recipot/src/App.scss
@@ -70,3 +70,8 @@
 .cursor-pointer {
   cursor: pointer;
 }
+
+.margin-center {
+  margin-left: auto;
+  margin-right: auto;
+}
